--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "ts-event-emitter",
+  "name": "@andytango/ts-event-emitter",
   "version": "1.0.0",
   "description": "Minimal event emitter with typescript",
   "main": "dist/index.js",
   "author": "andytango",
   "license": "MIT",
+  "private": false,
   "scripts": {
     "prepublishOnly": "yarn build",
     "build": "yarn clean && yarn compile",
